load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "kafka",
    srcs = [
        "TestCunsumer.java",
        "TestCunsumer2.java",
        "TestCunsumer3.java",
        "TestProducer.java",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["@maven//:org_apache_kafka_kafka_clients"],
)

java_binary(
    name = "TestCunsumer",
    main_class = "cn.iliubang.exercises.kafka.TestCunsumer",
    visibility = ["//visibility:public"],
    runtime_deps = [":kafka"],
)

java_binary(
    name = "TestCunsumer2",
    main_class = "cn.iliubang.exercises.kafka.TestCunsumer2",
    visibility = ["//visibility:public"],
    runtime_deps = [":kafka"],
)

java_binary(
    name = "TestCunsumer3",
    main_class = "cn.iliubang.exercises.kafka.TestCunsumer3",
    visibility = ["//visibility:public"],
    runtime_deps = [":kafka"],
)

java_binary(
    name = "TestProducer",
    main_class = "cn.iliubang.exercises.kafka.TestProducer",
    visibility = ["//visibility:public"],
    runtime_deps = [":kafka"],
)
