load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "mdc",
    srcs = ["Demo.java"],
    visibility = ["//:__subpackages__"],
    deps = ["@maven//:log4j_log4j"],
)

java_binary(
    name = "Demo",
    main_class = "cn.iliubang.exercises.mdc.Demo",
    visibility = ["//visibility:public"],
    runtime_deps = [":mdc"],
)
