load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "redislock",
    srcs = [
        "Lock.java",
        "RedisLock.java",
        "TestRedLock.java",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["@maven//:redis_clients_jedis"],
)

java_binary(
    name = "TestRedLock",
    main_class = "cn.iliubang.exercises.redislock.TestRedLock",
    visibility = ["//visibility:public"],
    runtime_deps = [":redislock"],
)
