load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "classloader",
    srcs = [
        "MyTest1.java",
        "MyTest2.java",
        "MyTest3.java",
        "MyTest4.java",
        "MyTest5.java",
        "MyTest6.java",
        "MyTest7.java",
        "MyTest8.java",
        "MyTest9.java",
    ],
    visibility = ["//:__subpackages__"],
)

java_binary(
    name = "FinalTest",
    main_class = "cn.iliubang.exercises.jvm.classloader.FinalTest",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest1",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest1",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest2",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest2",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest3",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest3",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest4",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest4",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest5",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest5",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest6",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest6",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest7",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest7",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest8",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest8",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)
