# Copyright (c) 2023 The Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Authors: liubang (it.liubang@gmail.com)
# Created: 2023/05/21 21:06

load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "classloader",
    srcs = [
        "MyTest1.java",
        "MyTest2.java",
        "MyTest3.java",
        "MyTest4.java",
        "MyTest5.java",
        "MyTest6.java",
        "MyTest7.java",
        "MyTest8.java",
        "MyTest9.java",
    ],
    visibility = ["//:__subpackages__"],
)

java_binary(
    name = "FinalTest",
    main_class = "cn.iliubang.exercises.jvm.classloader.FinalTest",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest1",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest1",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest2",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest2",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest3",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest3",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest4",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest4",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest5",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest5",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest6",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest6",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest7",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest7",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)

java_binary(
    name = "MyTest8",
    main_class = "cn.iliubang.exercises.jvm.classloader.MyTest8",
    visibility = ["//visibility:public"],
    runtime_deps = [":classloader"],
)
