load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "collection",
    srcs = [
        "TestCollection.java",
        "TestList.java",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["//java/primary/src/main/java/cn/iliubang/exercises/primary/oop"],
)

java_binary(
    name = "TestCollection",
    main_class = "cn.iliubang.exercises.primary.collection.TestCollection",
    visibility = ["//visibility:public"],
    runtime_deps = [":collection"],
)

java_binary(
    name = "TestList",
    main_class = "cn.iliubang.exercises.primary.collection.TestList",
    visibility = ["//visibility:public"],
    runtime_deps = [":collection"],
)
