load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "abstractfactory",
    srcs = [
        "CarFactory.java",
        "Client01.java",
        "Engine.java",
        "LowCarFactory.java",
        "LowEngine.java",
        "LowSeat.java",
        "LowTyre.java",
        "LuxuryCarFactory.java",
        "LuxuryEngine.java",
        "LuxurySeat.java",
        "LuxuryTyre.java",
        "Seat.java",
        "Tyre.java",
    ],
    visibility = ["//:__subpackages__"],
)

java_binary(
    name = "Client01",
    main_class = "cn.iliubang.exercises.dp.factory.abstractfactory.Client01",
    visibility = ["//visibility:public"],
    runtime_deps = [":abstractfactory"],
)
