load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "factorymethod",
    srcs = [
        "Audi.java",
        "AudiFactory.java",
        "Byd.java",
        "BydFactory.java",
        "Car.java",
        "CarFactory.java",
        "Client01.java",
    ],
    visibility = ["//:__subpackages__"],
)

java_binary(
    name = "Client01",
    main_class = "cn.iliubang.exercises.dp.factory.factorymethod.Client01",
    visibility = ["//visibility:public"],
    runtime_deps = [":factorymethod"],
)
