load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "simplefactory",
    srcs = [
        "Audi.java",
        "Byd.java",
        "Car.java",
        "CarFactory.java",
        "Client01.java",
        "Client02.java",
    ],
    visibility = ["//:__subpackages__"],
)

java_binary(
    name = "Client01",
    main_class = "cn.iliubang.exercises.dp.factory.simplefactory.Client01",
    visibility = ["//visibility:public"],
    runtime_deps = [":simplefactory"],
)

java_binary(
    name = "Client02",
    main_class = "cn.iliubang.exercises.dp.factory.simplefactory.Client02",
    visibility = ["//visibility:public"],
    runtime_deps = [":simplefactory"],
)
