load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "some",
    srcs = [
        "Demo01.java",
        "MyAnnotation01.java",
        "MyAnnotation02.java",
        "Test01.java",
    ],
    visibility = ["//:__subpackages__"],
)

java_binary(
    name = "Demo01",
    main_class = "cn.iliubang.exercises.primary.annotation.some.Demo01",
    visibility = ["//visibility:public"],
    runtime_deps = [":some"],
)
