load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "some",
    srcs = [
        "Demo.java",
        "Demo2.java",
        "MyClassLoader.java",
        "TestMyClassLoader.java",
    ],
    visibility = ["//:__subpackages__"],
)

java_binary(
    name = "Demo",
    main_class = "cn.iliubang.exercises.primary.classloader.some.Demo",
    visibility = ["//visibility:public"],
    runtime_deps = [":some"],
)

java_binary(
    name = "Demo2",
    main_class = "cn.iliubang.exercises.primary.classloader.some.Demo2",
    visibility = ["//visibility:public"],
    runtime_deps = [":some"],
)

java_binary(
    name = "TestMyClassLoader",
    main_class = "cn.iliubang.exercises.primary.classloader.some.TestMyClassLoader",
    visibility = ["//visibility:public"],
    runtime_deps = [":some"],
)
