# Copyright (c) 2023 The Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Authors: liubang (it.liubang@gmail.com)
# Created: 2023/05/21 21:06

load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "stream",
    srcs = [
        "ArtistList.java",
        "CountUseFor.java",
        "CountUseIterator.java",
        "CountUseStream.java",
        "DemoCollectToList.java",
        "DemoMap.java",
        "DemoMinAndMax.java",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["@maven//:junit_junit"],
)

java_binary(
    name = "CountUseFor",
    main_class = "cn.iliubang.exercises.primary.functional.stream.CountUseFor",
    visibility = ["//visibility:public"],
    runtime_deps = [":stream"],
)

java_binary(
    name = "CountUseIterator",
    main_class = "cn.iliubang.exercises.primary.functional.stream.CountUseIterator",
    visibility = ["//visibility:public"],
    runtime_deps = [":stream"],
)

java_binary(
    name = "CountUseStream",
    main_class = "cn.iliubang.exercises.primary.functional.stream.CountUseStream",
    visibility = ["//visibility:public"],
    runtime_deps = [":stream"],
)
